K8s/multipass/hello-server/hello-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress  
metadata:
  name: ingress-host-bar
spec:
  ingressClassName: nginx
  rules:
  - host: hello.ismael16.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: hello-server
          servicePort: 8000
  - host: demo.ismael16.com
    http:
      paths:
      - pathType: Prefix
        path: "/nginx"  
        backend:
          serviceName: nginx-demo
          servicePort: 8000
